# qfinlib

./: .gitignore  PUBLISHING.md  README.md  SETUP_GIT_HOOKS.md  pre-commit.bat  pre-commit.sh  publish.sh  pyproject.toml  setup-git-hooks.sh  setup.py
.githooks/: pre-commit
.github/: CI_SETUP.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: check-version.yml  ci.yml  testpypi.yml
examples/: bond_metrics_example.py  swaption_example.py
examples/credit/: cds_pricing.ipynb
examples/inflation/: zcis_pricing.ipynb
examples/rates/: bond_carry_roll.ipynb  curve_building.ipynb  swap_pricing.ipynb  us_swap_curve_example.py
qfinlib/: __init__.py
qfinlib/calibration/: __init__.py
qfinlib/core/: __init__.py
qfinlib/date/: __init__.py  bdc.py  date.py  dcf.py  holiday.py  interval.py  roll.py  schedule.py  tenor.py
qfinlib/instruments/: __init__.py  base.py
qfinlib/market/: __init__.py  base.py  container.py  mutator.py
qfinlib/math/: __init__.py  analytics.py  linalg.py
qfinlib/model/: __init__.py  base.py
qfinlib/monitoring/: __init__.py  scanner.py
qfinlib/portfolio/: __init__.py  aggregation.py  attribution.py  portfolio.py  position.py
qfinlib/pricing/: __init__.py  engine.py
qfinlib/risk/: __init__.py  calculator.py
qfinlib/strategy/: __init__.py  generator.py
qfinlib/trade/: __init__.py  base.py
qfinlib/utils/: __init__.py  cache.py
qfinlib/valuation/: __init__.py
tests/: __init__.py  test_basic.py
tests/test_calibration/: __init__.py
tests/test_date/: __init__.py
tests/test_market/: __init__.py  (+1 more)
(+214 files in other folders)
